desktop/core/src/desktop/static/desktop/less/hue.less
/* ... */
.hue-context-menu > li > a {
  display: block;
  position: relative;
  clear: both;
  height: 22px;
  line-height: 22px;
  vertical-align: middle;
  padding: 6px 16px 6px 38px;
  color: @cui-gray-800;
  text-decoration: none;
  font-weight: 400;
  white-space: nowrap;
  .hue-ease-transition(background-color);
}

.hue-context-menu > li > .disabled {
  display: block;
  position: relative;
  clear: both;
  height: 22px;
  line-height: 22px;
  vertical-align: middle;
  padding: 6px 16px 6px 38px;
  cursor: default;
  color: @cui-gray-400;
  text-decoration: none;
  font-weight: 400;
  white-space: nowrap;
}

.hue-inner-drop-down > li > a:hover,
.hue-inner-drop-down > li.active,
.hue-context-menu > li.active,
.hue-context-menu > li > a:not(.disabled):hover {
  background-color: @hue-primary-color-light;
}

.hue-context-menu > li > .disabled > i {
  position: absolute;
  height: 22px;
  left: 13px;
  right: auto;
  top: 6px;
  color: @cui-gray-400;
  font-size: 17px;
  line-height: 22px;
  vertical-align: middle;
}

.hue-context-menu > li > a > i:not(.sub-icon) {
  position: absolute;
  top: 6px;
  left: 13px;
  right: auto;
  line-height: 22px;
  height: 24px;
  color: @cui-gray-800;
  font-size: 17px;
  vertical-align: middle;
}

.hue-context-menu > li > a > .sub-icon {
  position: absolute;
  top: 6px;
  left: auto;
  right: 13px;
  line-height: 22px;
  height: 24px;

  color: @cui-gray-800;
  font-size: 12px;
  vertical-align: middle;
}

.hue-context-menu > .divider {
  height: 1px;
  margin: 9px 0;
  overflow: hidden;
  background-color: @cui-gray-200;
}

#sqlContextPopover .hue-popover {
  position: fixed;
}

/* styling for the imported apps */

.page-content .navbar-inner {
  margin: 10px 10px 0 10px;
  background-color: transparent;
  border: none;
  border-bottom: 1px solid @cui-gray-050;
}

.page-content .navbar.navbar-inverse.navbar-fixed-top {
  position: static;
}

.page-content .navbar .navbar-inner {
  box-shadow: none;
}

/* editor and report */
.editorComponents .progress {
  border: none;
}

.editorComponents .context-panel {
  display: none;
}

.editorComponents .snippet {
  margin-right: 0;
}

/* search */
#searchComponents .search-bar, #searchComponents .card-toolbar {
  position: static;
}

#searchComponents .card-toolbar {
  zoom: 0.8;
}

#searchComponents .card-toolbar a, #searchComponents .card-toolbar .draggable-widget {
  float: left;
}

#searchComponents .card-toolbar .draggable-widget a {
  float: none;
}

#searchComponents .form-search .input-append .search-query {
  width: 50px;
}

/* oozie workflow */
#oozie_workflowComponents .card-toolbar {
  position: static;
}

.tooltip, .ui-autocomplete {
  z-index: 3000 !important;
}

/* sqoop */
#sqoopComponents .top-bar {
  position: initial!important;
}

/* context panel */
/* TODO: Positioning and clean-up */
.context-panel {
  position: fixed;
  background: @cui-white;
  height: calc(30%);
  top: 113px;
  z-index: 401;
  overflow-y: auto;
  padding: 10px 0;
  width: 420px;
  right: -440px;
  outline: none !important;
  .hue-box-shadow(-2px, 2px);
  .hue-ease-transition(right);
}

.context-panel.visible {
  right: 0;
}

.context-panel .nav-tabs {
  padding-left: 10px;
}

.context-panel .tab-content {
  padding: 12px;
  min-height: calc(10%);
}

.context-panel .tab-pane {
  height: 100%;
}

#mini_jobbrowser {
  overflow-y: auto;
  max-height: 350px;
  table, thead, tbody, th, td, tr {
    display: block;
  }
  thead tr {
    display: none;
  }
  input.search-query {
    width: 70px;
  }
}

.uploadstatus {
  border: 1px solid @cui-gray-300;
  border-bottom: none;
  bottom: 0;
  right: 60px;
  margin: 0;
  position: fixed;
  width: 560px;
  z-index: 1001;
}

.scrollable-uploadstatus {
  max-height: 170px;
  overflow-y: auto;
}

.uploadstatusbar {
  background-color: @hue-primary-color-light;
  height: 4px;
  bottom: 0;
  left: 0;
  margin: 0;
  position: fixed;
  width: 100%;
}

.uploadstatusbar div {
  background-color: @hue-primary-color-dark;
  height: 4px;
  width: 30%;
}

.progress-row {
  margin-top: 7px;
}

.progress-row-bar {
  height: 1px;
  background-color: @hue-primary-color-dark;
  width: 0;
  margin-top: 3px;
}

.progress .bar-upload {
  background-color: @hue-primary-color-dark !important;
}

#importerComponents {
  .step-indicator-fixed {
    position: initial !important;
  }
  .vertical-spacer {
    height: 0 !important;
  }
}

.help-inline.muted {
  color: @cui-gray-600;
}

.form-actions {
  width: initial !important;
  position: initial !important;
}

